# IdHub

./: .dockerignore  .env.example  .env.example.dev  .env.example.prod  .gitignore  Dockerfile  Dockerfile_blockchain_test_node  LICENSE  LICENSE.md  README.md  apiWrapper.py  apiWrapper_testing.py  cache_context.json  call_oracle.js  cucumber-report-html.js  demo.js  docker-compose.yml  docker-reset.sh  hardhat.config.js  initial_datas.py  manage.py  manage_gitsubtree.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  test-environment.yml  truffle-config.js  urls_provisional
context/: base.jsonld  course-credential.jsonld  ereuse-issuer.jsonld  ereuse-roles.jsonld  federation-membership.jsonld  financial-vulnerability.jsonld  membership-card.jsonld  organization-membership-dlt.jsonld
contracts/: AccessList.sol  AccessListInterface.sol  AddressRoles.sol  AddressRolesInterface.sol  DepositDevice.sol  DeviceFactory.sol  DeviceFactoryInterface.sol  DocumentProofs.sol  DocumentProofsInterface.sol  ERC20.sol  IAbacContract.sol  Migrations.sol  Ownable.sol  TokenContract.sol
create-operator-user/: Dockerfile  entrypoint.sh
demo_eel/: README.md  main.py  requirements.txt
didResolverApi/: Dockerfile  README.md  docker-compose.yml  index.js  package-lock.json  package.json  resolution.js
didResolverModule/: ereuseResolver.js  test.js  (+2 more)
pythonPackage/: LICENSE  README.md  pyproject.toml
pythonPackage/src/ereuseapi/: methods.py
pythonPackage/src/ereuseapitest.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pythonPackage/tests/: apiWrapper_testing.py
(+447 files in other folders)
