[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ereuseapitest"
version = "0.0.6"
description = "eReuse API method invocation with python"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["ereuse"]
dependencies = [
    "requests"
]